Fix feature/home-page bad smells